--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1314,7 +1314,6 @@ textarea.input-field {
 
 
 
-
 /*-----------------------------------*\
   #FOOTER
 \*-----------------------------------*/
@@ -1385,7 +1384,7 @@ textarea.input-field {
 }
 
 .footer-link {
-  color: var(--quick-silver);
+  color:var(--white);
   font-weight: var(--weight-bold);
   text-transform: uppercase;
   letter-spacing: var(--letterSpacing-4);
@@ -1396,7 +1395,8 @@ textarea.input-field {
 .footer-link:is(:hover, :focus-visible) { color: var(--gold-crayola); }
 
 .copyright {
-  color: var(--quick-silver);
+  color: var(--weight-regular);
+  font-size: 17px;
   line-height: var(--lineHeight-3);
 }
 
@@ -1405,7 +1405,6 @@ textarea.input-field {
   color: var(--gold-crayola);
   text-decoration: underline;
 }
-
 
 
 
@@ -1443,6 +1442,32 @@ textarea.input-field {
   visibility: visible;
 }
 
+
+.whatsapp-btn {
+  position: fixed;
+  bottom: 15px;
+  background-color: #25d366;
+  color: #fff;
+  padding: 15px 20px;
+  margin-left: 20px;
+  border-radius: 50%;
+  text-decoration: none;
+  font-size: 37px;
+  font-weight: bold;
+  transition: all 0.3s ease-in-out;
+  z-index: 1000;
+  
+
+}
+
+.whatsapp-btn:hover {
+  background-color: #128c7e;
+}
+
+.whatsapp-btn i {
+  margin-right: 10px;
+
+}
 
 
 
@@ -1652,8 +1677,13 @@ textarea.input-field {
 /**
  * responsive for larger than 768px screen
  */
-
+@media (max-width: 600px){
+  .whatsapp-btn{
+    padding: 5px 10px;
+    font-size:30px;
+  }}
 @media (min-width: 768px) {
+  
 
   /**
    * REUSED STYLE
@@ -1668,6 +1698,7 @@ textarea.input-field {
     width: calc(50% - 20px);
     margin-inline: auto;
   }
+  
 
 
 
@@ -1927,6 +1958,7 @@ textarea.input-field {
     --fontSize-title-2: 2.5rem;
 
   }
+  
 
 
 
@@ -2107,7 +2139,7 @@ textarea.input-field {
     top: 46%;
     left: 0;
   }
-
+  
 
 
   /**
@@ -2146,11 +2178,16 @@ textarea.input-field {
   .features .shape-1 {
     top: -100px;
     right: 0;
+    opacity: 50%;
+    filter:var(--black-alpha-15);
   }
 
   .features .shape-2 {
     bottom: 80px;
     left: 0;
+    filter:var(--black-alpha-15);
+    opacity: 50%;
+    
   }
 
 }
