--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -837,7 +837,7 @@ body.nav-active { overflow: hidden; }
   bottom: 15px;
   right: 15px;
   z-index: 2;
-  background-color: var(--gold-crayola);
+  background-color: var(--black-alpha);
   width: 110px;
   height: 110px;
   padding: 12px;
@@ -937,7 +937,7 @@ body.nav-active { overflow: hidden; }
 
 .service-card:is(:hover, :focus-within) .card-banner { transform: scale(1.05); }
 
-.service .card-title { margin-block-end: 12px; }
+.service .card-title { margin-block-end: 12px;}
 
 
 
@@ -1060,11 +1060,6 @@ WHATSSAP
 
 .menu .grid-list { margin-block-end: 50px; }
 
-.menu-card {
-  display: flex;
-  align-items: flex-start;
-  gap: 20px;
-}
 
 .hover\:card .card-banner { background-color: var(--gold-crayola); }
 
@@ -1080,7 +1075,7 @@ WHATSSAP
   border-radius: var(--radius-24);
 }
 
-.menu-card .card-title { transition: var(--transition-1); }
+.menu-card .card-title { transition: var(--transition-1); font-size: 30px; margin-top: 10px;}
 
 .menu-card .card-title:is(:hover, :focus-visible) { color: var(--gold-crayola); }
 
@@ -1098,11 +1093,13 @@ WHATSSAP
 .menu-card .span {
   color: var(--gold-crayola);
   margin-block: 10px;
+  font-size: 23px;
 }
 
 .menu-card .card-text {
   color: var(--quick-silver);
   line-height: var(--lineHeight-4);
+  font-size: 20px;
 }
 
 .menu-text .span {
@@ -1681,9 +1678,14 @@ textarea.input-field {
   .whatsapp-btn{
     padding: 5px 10px;
     font-size:30px;
-  }}
-@media (min-width: 768px) {
   
+    
+  }
+  .menu-card .span {
+    font-size: 13px;
+  }
+  .menu-card .card-title { transition: var(--transition-1); font-size: 10px; margin-top: 5px;}}
+@media (min-width: 768px) {
 
   /**
    * REUSED STYLE
@@ -2119,7 +2121,6 @@ textarea.input-field {
  */
 
 @media (min-width: 1400px) {
-
   /**
    * HEADER
    */
