--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1684,7 +1684,7 @@ textarea.input-field {
   .menu-card .span {
     font-size: 13px;
   }
-  .menu-card .card-title { transition: var(--transition-1); font-size: 10px; margin-top: 5px;}}
+  .menu-card .card-title { transition: var(--transition-1); margin-top: 5px;}}
 @media (min-width: 768px) {
 
   /**
