--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1002,23 +1002,6 @@ body.nav-active { overflow: hidden; }
 }
 
 /*-----------------------------------*\
-WHATSSAP
-\*-----------------------------------*/
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/*-----------------------------------*\
   #SPECIAL DISH
 \*-----------------------------------*/
 
@@ -1028,7 +1011,6 @@ WHATSSAP
   margin-inline: auto;
   margin-block-end: 12px;
 }
-
 .special-dish .section-text { margin-block: 16px 40px; }
 
 .special-dish-content .wrapper {
@@ -1038,19 +1020,13 @@ WHATSSAP
   gap: 20px;
   margin-block-end: 40px;
 }
-
 .special-dish-content .del {
   text-decoration: none;
   color: var(--davys-grey);
 }
-
 .special-dish-content .span { color: var(--gold-crayola); }
 
 .special-dish .btn { margin-inline: auto; }
-
-
-
-
 
 /*-----------------------------------*\
   #MENU
@@ -1089,13 +1065,11 @@ WHATSSAP
   padding-inline: 10px;
   margin-block-start: 10px;
 }
-
 .menu-card .span {
   color: var(--gold-crayola);
   margin-block: 10px;
   font-size: 23px;
 }
-
 .menu-card .card-text {
   color: var(--quick-silver);
   line-height: var(--lineHeight-4);
@@ -1126,11 +1100,6 @@ WHATSSAP
   bottom: 0;
   right: 0;
 }
-
-
-
-
-
 /*-----------------------------------*\
   #TESTIMONIALS
 \*-----------------------------------*/
@@ -1167,72 +1136,48 @@ WHATSSAP
   text-transform: uppercase;
   letter-spacing: var(--letterSpacing-3);
 }
-
-
-
-
-
 /*-----------------------------------*\
   #RESERVATION
 \*-----------------------------------*/
 
 .reservation-form { margin-block-start: -270px; }
-
 .form-text { margin-block-end: 40px; }
-
 .form-text .link {
   display: inline;
   color: var(--gold-crayola);
 }
-
 .form-right .headline-1 { margin-block-end: 40px; }
-
 .form-right .contact-label { margin-block-end: 5px; }
-
 .form-right .separator { margin: 20px auto; }
-
 .form-right .body-4 {
   color: var(--quick-silver);
   line-height: var(--lineHeight-3);
 }
-
 .form-right .body-4:not(:last-child) { margin-block-end: 25px; }
-
 .form-left,
 .form-right { padding: 40px 20px 30px; }
-
 .input-field[type="date"] {
   text-transform: uppercase;
   padding-inline-end: 10px;
 }
-
 .input-field[type="date"]::-webkit-calendar-picker-indicator { opacity: 0; }
-
 textarea.input-field {
   resize: none;
   height: 140px;
   padding-block: 20px;
   line-height: var(--lineHeight-1);
 }
-
 .form-left .btn {
   max-width: 100%;
   width: 100%;
 }
-
 .form-right {
   background-repeat: repeat;
   background-position: top left;
 }
-
-
-
-
-
 /*-----------------------------------*\
   #FEATURES
 \*-----------------------------------*/
-
 .features .section-title { margin-block-end: 40px; }
 
 .feature-card { padding: 30px 20px 40px; }
@@ -1246,31 +1191,21 @@ textarea.input-field {
   margin-inline: auto;
   transition: var(--transition-2);
 }
-
 .feature-card:hover .card-icon { transform: scale(-1) rotate(180deg); }
-
 .feature-card .card-title { margin-block: 20px; }
-
 .feature-card .card-text {
   color: var(--quick-silver);
   line-height: var(--lineHeight-6);
 }
 
-
-
-
-
 /*-----------------------------------*\
-  #EVENT
+  #EVENTOS
 \*-----------------------------------*/
-
 .event .section-title { margin-block-end: 40px; }
-
 .event-card {
   position: relative;
   overflow: hidden;
 }
-
 .event-card .card-content {
   background-image: var(--gradient-1);
   position: absolute;
@@ -1278,7 +1213,6 @@ textarea.input-field {
   width: 100%;
   padding: 35px 35px 25px;
 }
-
 .event-card .publish-date {
   position: absolute;
   top: 30px;
@@ -1290,7 +1224,6 @@ textarea.input-field {
   letter-spacing: var(--letterSpacing-1);
   line-height: 14px;
 }
-
 .event-card .card-subtitle {
   color: var(--gold-crayola);
   text-transform: uppercase;
@@ -1298,25 +1231,17 @@ textarea.input-field {
   letter-spacing: var(--letterSpacing-2);
   margin-block-end: 5px;
 }
-
 .event-card .card-banner .img-cover { transition: var(--transition-2); }
-
 .event-card:is(:hover, :focus-within) .img-cover { transform: scale(1.05); }
-
 .event .btn {
   margin-inline: auto;
   margin-block-start: 40px;
 }
 
-
-
-
 /*-----------------------------------*\
   #FOOTER
 \*-----------------------------------*/
-
 .footer-top { margin-block-end: 70px; }
-
 .footer-brand {
   position: relative;
   padding: 50px 40px;
@@ -1324,7 +1249,6 @@ textarea.input-field {
   background-position: center top;
   background-repeat: repeat;
 }
-
 .footer-brand::before,
 .footer-brand::after {
   top: 0;
@@ -1370,16 +1294,12 @@ textarea.input-field {
   display: inline;
   color: var(--white);
 }
-
 .footer-brand .icon-wrapper .input-field { cursor: text; }
-
 .footer-brand .btn { min-width: 100%; }
-
 .footer-list {
   display: grid;
   gap: 20px;
 }
-
 .footer-link {
   color:var(--white);
   font-weight: var(--weight-bold);
@@ -1388,24 +1308,17 @@ textarea.input-field {
   margin-inline: auto;
   transition: var(--transition-1);
 }
-
 .footer-link:is(:hover, :focus-visible) { color: var(--gold-crayola); }
-
 .copyright {
   color: var(--weight-regular);
   font-size: 17px;
   line-height: var(--lineHeight-3);
 }
-
 .copyright .link {
   display: inline;
   color: var(--gold-crayola);
   text-decoration: underline;
 }
-
-
-
-
 /*-----------------------------------*\
   #BACK TO TOP
 \*-----------------------------------*/
@@ -1428,18 +1341,14 @@ textarea.input-field {
   visibility: hidden;
   z-index: 4;
 }
-
 .back-top-btn:is(:hover, :focus-visible) {
   background-color: var(--white);
   color: var(--gold-crayola);
 }
-
 .back-top-btn.active {
   opacity: 1;
   visibility: visible;
 }
-
-
 .whatsapp-btn {
   position: fixed;
   bottom: 15px;
@@ -1453,22 +1362,14 @@ textarea.input-field {
   font-weight: bold;
   transition: all 0.3s ease-in-out;
   z-index: 1000;
-  
-
 }
-
 .whatsapp-btn:hover {
   background-color: #128c7e;
 }
-
 .whatsapp-btn i {
   margin-right: 10px;
 
 }
-
-
-
-
 /*-----------------------------------*\
   #MEDIA QUERIES
 \*-----------------------------------*/
@@ -1490,10 +1391,7 @@ textarea.input-field {
      */
 
     --fontSize-body-2: 2rem;
-
   }
-
-
 
   /**
    * REUSED STYLE
@@ -1505,9 +1403,6 @@ textarea.input-field {
   }
 
   .contact-number { --fontSize-body-1: 3rem; }
-
-
-
   /**
    * TOPBAR
    */
@@ -1549,9 +1444,6 @@ textarea.input-field {
   .topbar .link { transition: var(--transition-1); }
 
   .topbar .link:is(:hover, :focus-visible) { color: var(--gold-crayola); }
-
-
-
   /**
    * HEADER
    */
@@ -1564,9 +1456,6 @@ textarea.input-field {
     display: block;
     margin-inline-start: auto;
   }
-
-
-
   /**
    * HERO
    */
@@ -1597,9 +1486,6 @@ textarea.input-field {
   .about .abs-img-1 { width: 285px; }
 
   .about .contact-number { --fontSize-body-1: 2.4rem; }
-
-
-
   /**
    * MENU
    */
@@ -1627,9 +1513,6 @@ textarea.input-field {
     flex-grow: 1;
     border-block: 1px solid var(--white-alpha-20);
   }
-
-
-
   /**
    * EVENT
    */
@@ -1638,9 +1521,6 @@ textarea.input-field {
     max-width: 420px;
     margin-inline: auto;
   }
-
-
-
   /**
    * FOOTER
    */
@@ -1666,11 +1546,6 @@ textarea.input-field {
   }
 
 }
-
-
-
-
-
 /**
  * responsive for larger than 768px screen
  */
@@ -1696,10 +1571,6 @@ textarea.input-field {
     width: calc(50% - 20px);
     margin-inline: auto;
   }
-  
-
-
-
   /**
    * HEADER
    */
@@ -1763,11 +1634,6 @@ textarea.input-field {
   .footer-brand { grid-column: 1 / 3; }
 
 }
-
-
-
-
-
 /**
  * responsive for larger than 992px screen
  */
@@ -1787,9 +1653,6 @@ textarea.input-field {
     --section-space: 100px;
 
   }
-
-
-
   /**
    * REUSED STYLE
    */
@@ -1802,9 +1665,6 @@ textarea.input-field {
     grid-column: auto;
     width: 100%;
   }
-
-
-
   /**
    * TOPBAR
    */
@@ -1812,9 +1672,6 @@ textarea.input-field {
   .topbar-item:not(.link) { display: flex; }
 
   .topbar .item-2 { margin-inline-end: auto; }
-
-
-
   /**
    * SERVICE
    */
@@ -1841,9 +1698,6 @@ textarea.input-field {
     grid-template-columns: 0.7fr 1fr;
     gap: 30px;
   }
-
-
-
   /**
    * SPECIAL DISH
    */
@@ -1869,9 +1723,6 @@ textarea.input-field {
     left: -40px;
     animation: move 5s linear infinite;
   }
-
-
-
   /**
    * MENU
    */
@@ -1900,9 +1751,6 @@ textarea.input-field {
     max-width: 910px;
     margin-inline: auto;
   }
-
-
-
   /**
    * RESERVATION
    */
@@ -1911,9 +1759,6 @@ textarea.input-field {
     display: grid;
     grid-template-columns: 1fr 0.5fr;
   }
-
-
-
   /**
    * FOOTER
    */
@@ -1922,7 +1767,6 @@ textarea.input-field {
     grid-template-columns: 0.45fr 1fr 0.45fr;
     align-items: center;
   }
-
   .footer-brand {
     grid-column: auto;
     order: 1;
@@ -1932,11 +1776,6 @@ textarea.input-field {
   .footer-list:last-child { order: 2; }
 
 }
-
-
-
-
-
 /**
  * responsive for larger than 1200px screen
  */
@@ -1957,40 +1796,27 @@ textarea.input-field {
 
   }
   
-
-
-
   /**
    * REUSED STYLE
    */
-
   .container,
   :is(.service, .event) .container {
     max-width: 1200px;
     width: 100%;
     margin-inline: auto;
   }
-
-
-
   /**
    * TOPBAR
    */
-
   .topbar .container { max-width: unset; }
 
   .topbar .separator { display: block; }
-
-
-
   /**
    * HEADER
    */
-
   .nav-open-btn,
   .navbar > *:not(.navbar-list),
   .header .overlay { display: none; }
-
   .header .container { max-width: unset; }
 
   .navbar,
@@ -2026,9 +1852,6 @@ textarea.input-field {
   }
 
   .header .btn { margin-inline-start: 0; }
-
-
-
   /**
    * HERO
    */
@@ -2052,17 +1875,11 @@ textarea.input-field {
   .service .grid-list li:nth-child(2n+1) { transform: translateY(-160px); }
 
   .service .section-text { margin-block-end: 75px; }
-
-
-
   /**
    * ABOUT
    */
 
   .about { padding-block: 170px 100px; }
-
-
-
   /**
    * SPECIAL DISH
    */
@@ -2076,30 +1893,19 @@ textarea.input-field {
     max-width: 460px;
     margin-inline: 0;
   }
-
-
-
   /**
    * MENU
    */
-
   .menu .grid-list {
     gap: 55px 200px;
     margin-block-end: 55px;
   }
-
-
-
   /**
    * TESTIMONIALS
    */
 
   .form-left,
   .form-right { padding: 75px 60px; }
-
-
-
-
   /**
    * FEATURES
    */
@@ -2107,11 +1913,6 @@ textarea.input-field {
   .features .grid-list { grid-template-columns: repeat(4, 1fr); }
 
 }
-
-
-
-
-
 /**
  * responsive for larger than 1400px screen
  */
@@ -2122,9 +1923,6 @@ textarea.input-field {
    */
 
   .navbar { margin-inline: auto; }
-
-
-
   /**
    * ABOUT
    */
@@ -2161,13 +1959,9 @@ textarea.input-field {
     transform: translateY(50%);
     width: max-content;
   }
-
-
-
   /**
    * FEATURES
    */
-
   .features { overflow: visible; }
 
   .features .shape { display: block; }
@@ -2186,5 +1980,4 @@ textarea.input-field {
     opacity: 50%;
     
   }
-
 }
